objects/ASI_CRM_Employee_Attendee__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Actual_Amount__c</fullName>
        <formula>IF( 
ISPICKVAL(ASI_CRM_Call_Detail__r.ASI_CRM_Status__c,&apos;Achieved&apos;)|| 
ISPICKVAL(ASI_CRM_Call_Detail__r.ASI_CRM_Status__c,&apos;TnE Created&apos;), 
ASI_CRM_Call_Detail__r.ASI_CRM_Actual_Amount__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attendee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Employee_Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Branch_Code__c</fullName>
        <formula>ASI_CRM_Attendee__r.ASI_KOR_User_Branch_Code__c</formula>
        <label>Branch Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Call_Detail__c</fullName>
        <label>Call Detail</label>
        <referenceTo>ASI_CRM_Call_Detail__c</referenceTo>
        <relationshipLabel>Employee Attendees</relationshipLabel>
        <relationshipName>Employee_Attendees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Channel__c</fullName>
        <formula>TEXT(ASI_CRM_Call_Detail__r.ASI_CRM_Customer__r.ASI_CRM_VN_Channel__c)</formula>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer__c</fullName>
        <formula>ASI_CRM_Call_Detail__r.ASI_CRM_Customer__r.Name</formula>
        <label>Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Department_Code__c</fullName>
        <label>Department Category Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Payer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Visit_Count__c</fullName>
        <formula>IF( 
ISPICKVAL(ASI_CRM_Call_Detail__r.ASI_CRM_Status__c,&apos;Achieved&apos;)|| 
ISPICKVAL(ASI_CRM_Call_Detail__r.ASI_CRM_Status__c,&apos;TnE Created&apos;), 
1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Visit_Duration_Min__c</fullName>
        <formula>IF(
ISPICKVAL(ASI_CRM_Call_Detail__r.ASI_CRM_Status__c,&apos;Achieved&apos;)||
ISPICKVAL(ASI_CRM_Call_Detail__r.ASI_CRM_Status__c,&apos;TnE Created&apos;),
ROUND( MOD((ASI_CRM_Call_Detail__r.ASI_CRM_Visit_Date_To__c -  ASI_CRM_Call_Detail__r.ASI_CRM_Visit_Date_From__c) * 24 * 60, 60), 0)
+ (ROUND( MOD((ASI_CRM_Call_Detail__r.ASI_CRM_Visit_Date_To__c -  ASI_CRM_Call_Detail__r.ASI_CRM_Visit_Date_From__c) * 24, 24), 0 )*60),
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit Duration (Min.)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Employee Attendee</label>
    <nameField>
        <displayFormat>AID{000000000}</displayFormat>
        <label>Attendee ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Attendees</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_JP_Employee_Attendee</fullName>
        <active>true</active>
        <label>JP CRM Employee Attendee</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_JP_Employee_Attendee_Planned</fullName>
        <active>true</active>
        <label>JP CRM Employee Attendee Planned</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ASI_CRM_JP_Change_Payer</fullName>
        <active>true</active>
        <errorConditionFormula>CONTAINS(RecordType.DeveloperName, &quot;ASI_CRM_JP&quot;)&amp;&amp;  NOT(ISPICKVAL( ASI_CRM_Call_Detail__r.ASI_CRM_Status__c , &quot;Planned&quot;)) &amp;&amp;  ISCHANGED( ASI_CRM_Payer__c )</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Payer__c</errorDisplayField>
        <errorMessage>You are only allowed to transfer call ownership when Status in Call Detail is &quot;Planned&quot;</errorMessage>
    </validationRules>
</CustomObject>